Fix Alignment

--- a/main.css
+++ b/main.css
@@ -239,7 +239,7 @@ body {
   .worrior-1 {
     position: absolute;
     width: 65%;
-    height: 30%;
+    height: 50%;
     bottom: 0;
     left: 35%;
     background-image: url("img/astro.png");
